src/objects/ADvendio__AdServer_Logins__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__ADTECH_Default_KeyGroup__c</fullName>
        <description>Name or ID of the Key-Group, that shall be used if no Key-Group is defined in the CampaignItem.</description>
        <inlineHelpText>Name or ID of the Key-Group, that shall be used if no Key-Group is defined in the CampaignItem.</inlineHelpText>
        <label>ADTECH Default KeyGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please link an Account to this AdServer Login. This is necessary to create a Media Campaign automatically from Programmatic Data Records.</description>
        <inlineHelpText>Please link an Account to this AdServer Login. This is necessary to create a Media Campaign automatically from Programmatic Data Records.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdServer Logins</relationshipLabel>
        <relationshipName>AdServerLogins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Tick the check box to activate the ad server login.</description>
        <inlineHelpText>Tick the check box to activate the ad server login.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Price_Field__c</fullName>
        <description>Select the CampaignItem field to be used as price in the AdServer.</description>
        <inlineHelpText>Select the CampaignItem field to be used as price in the AdServer.</inlineHelpText>
        <label>AdServer Price Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount net/net</fullName>
                </value>
                <value>
                    <fullName>Amount net3</fullName>
                </value>
                <value>
                    <fullName>Adserver Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdditionalPasword__c</fullName>
        <inlineHelpText>OAuth Token</inlineHelpText>
        <label>Additional Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdditionalURL__c</fullName>
        <label>Additional URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdditionalUsername__c</fullName>
        <label>Additional Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdserverFeatures__c</fullName>
        <label>Adserver Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMSPro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserExternalId__c</fullName>
        <description>This information is used to push to DFP in the filed External ID.</description>
        <inlineHelpText>This information is used to push to DFP in the filed External ID.</inlineHelpText>
        <label>Advertiser External ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account ID</fullName>
                </value>
                <value>
                    <fullName>Account External ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserGroupID__c</fullName>
        <description>Group ID to use for an Advertiser being created in Ad-Server.</description>
        <inlineHelpText>Group ID to use for an Advertiser being created in Ad-Server.</inlineHelpText>
        <label>Advertiser Group ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Login_url__c</fullName>
        <description>The login URL will be filled automatically by the interface.</description>
        <inlineHelpText>The login URL will be filled automatically by the interface.</inlineHelpText>
        <label>Login url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ADvendio__NetworkTimeZone__c</fullName>
        <description>Select the network time zone relevant to this login.</description>
        <inlineHelpText>Select the network time zone relevant to this login.</inlineHelpText>
        <label>Network Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Network_ID__c</fullName>
        <description>Enter the network ID relevant to this login. This is necessary if you have several networks.</description>
        <inlineHelpText>Enter the network ID relevant to this login. This is necessary if you have several networks.</inlineHelpText>
        <label>Network ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PartnerURL__c</fullName>
        <description>This field is not necessary.</description>
        <formula>$Api.Partner_Server_URL_280</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is not necessary.</inlineHelpText>
        <label>PartnerURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Password__c</fullName>
        <description>Enter the password of your ad server&apos;s API login.</description>
        <inlineHelpText>Enter the password of your ad server&apos;s API login.</inlineHelpText>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ServerAdress__c</fullName>
        <description>This field will be filled out automatically by the interface.</description>
        <formula>$Api.Enterprise_Server_URL_280</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will be filled out automatically by the interface.</inlineHelpText>
        <label>ServerAdress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SessionID__c</fullName>
        <description>This field will be filled out automatically by the interface.</description>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will be filled out automatically by the interface.</inlineHelpText>
        <label>SessionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Transfer_in_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically set while transfering data from the AdServer to ADvendio.</description>
        <inlineHelpText>Automatically set while transfering data from the AdServer to ADvendio.</inlineHelpText>
        <label>Transfer in progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__User_Name__c</fullName>
        <description>Enter your user name as used for your ad server login.</description>
        <inlineHelpText>Enter your user name as used for your ad server login.</inlineHelpText>
        <label>User Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AdServer Login</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__User_Name__c</columns>
        <columns>ADvendio__Network_ID__c</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ASL-{000}</displayFormat>
        <label>AdServer Login No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdServer Logins</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__ADEX</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server DoubleClick Ad Exchange</description>
        <label>ADEX</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ADFORM</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP Adform.</description>
        <label>ADFORM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ADITION</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server ADITION</description>
        <label>ADITION</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ADJUSTER</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server Ad-Juster</description>
        <label>ADJUSTER</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ADTECH</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server ADTECH</description>
        <label>ADTECH</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__APPNEXUS</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server APPNEXUS</description>
        <label>APPNEXUS</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__DART</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server DART</description>
        <label>DART</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__DFP</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server DFP</description>
        <label>DFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__LIVERAIL</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server LiveRail</description>
        <label>LIVERAIL</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__NUGGAD</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server NUGGAD</description>
        <label>NUGGAD</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__OVK</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for OVK Connect Center</description>
        <label>OVK</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__RUBICON</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP Rubicon Project.</description>
        <label>RUBICON</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__SMART</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server SMART</description>
        <label>SMART</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__TFSM</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server 24/7 Realmedia</description>
        <label>TFSM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__YIELDLAB</fullName>
        <active>true</active>
        <description>This record type should be used to store login data for Ad server YIELDLAB</description>
        <label>YIELDLAB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>